--- a/content/dota_addons/oitq/panorama/styles/custom_game/multiteam_flyout_scoreboard_custom.css
+++ b/content/dota_addons/oitq/panorama/styles/custom_game/multiteam_flyout_scoreboard_custom.css
@@ -3,7 +3,7 @@
     height: 100%;
 }
 
-#PlayerScore {
+#PlayerScore, #TeamTotalKills {
     horizontal-align: center;
     vertical-align: center;
     font-size: 18px;
@@ -33,4 +33,8 @@
     height: 30px;
     border-radius: 15px;
     box-shadow: 0px 0px 3px #000000FF;
+}
+
+.hiddenTeamTotalScore {
+    opacity: 0;
 }
