Added all heroes gifs

--- a/content/dota_addons/oitq/panorama/styles/custom_game/custom_hero_selection.css
+++ b/content/dota_addons/oitq/panorama/styles/custom_game/custom_hero_selection.css
@@ -108,8 +108,8 @@
 
 .selection-hero-portrait
 {
-    width: 327px;
-    height: 292px;
+    width: 100%;
+    height: 100%;
 }
 
 .selection-hero-portrait-frame
