--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -1,36 +1,47 @@
 "LootRarity"
 {
-    "0"
-    {
-        "percentage" "30"
+    "percentageLevel"   "10000"
 
+    "common"
+    {
         "items"
         {
-            "item_cold_blade"               "item_cold_blade"
-            "item_box_of_lost_souls"        "item_box_of_lost_souls"
+            "0"         "item_stone_of_time"
+            "1"         "item_stone_of_power"
+            "2"         "item_stone_of_haste"
+        }
+    }
+    "uncommon"
+    {
+        "items"
+        {
+            "0"         "item_cold_blade"
         }
     }
 
-    "1"
+    "rare"
     {
-        "percentage" "20"
-
         "items"
         {
-            "item_stone_of_life"            "item_stone_of_life"
-            "item_adrenaline_injection"     "item_adrenaline_injection"
+            "0"         "item_stomping_mechanism"
+            "1"         "item_box_of_lost_souls"
         }
     }
-
-    "2"
+    "epic"
     {
-        "percentage" "10"
-
         "items"
         {
-            "item_hazzard_goggles"          "item_hazzard_goggles"
-            "item_cross_of_eternity"        "item_cross_of_eternity"
-            "item_thunderstorm_totem"       "item_thunderstorm_totem"
+            "0"         "item_stone_of_life"
+            "1"         "item_adrenaline_injection"
+        }
+    }
+    "artifact"
+    {
+        "items"
+        {
+            "0"         "item_hazzard_goggles"
+            "1"         "item_cross_of_eternity"
+            "2"         "item_thunderstorm_totem"
         }
     }
 }
