Added new item: Frost Shield, Changed: some Item costs

--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -16,6 +16,7 @@
         "items"
         {
             "0"         "item_cold_blade"
+            "1"         "item_frost_shield"
         }
     }
 
