--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -27,6 +27,7 @@
             "0"         "item_stomping_mechanism"
             "1"         "item_box_of_lost_souls"
             "2"         "item_sudden_death"
+            "3"         "item_antique_branch"
         }
     }
     "epic"
