Added new items: Red Rage & Scary Sense, All items are purchasable

--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -17,6 +17,7 @@
         {
             "0"         "item_cold_blade"
             "1"         "item_frost_shield"
+            "2"         "item_scary_sense"
         }
     }
 
@@ -36,6 +37,7 @@
         {
             "0"         "item_stone_of_life"
             "1"         "item_adrenaline_injection"
+            "2"         "item_red_rage"
         }
     }
     "artifact"
