Added new item- Tomahawk, Loot changed

--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -18,6 +18,7 @@
             "0"         "item_cold_blade"
             "1"         "item_frost_shield"
             "2"         "item_scary_sense"
+            "3"         "item_tomahawk"
         }
     }
 
