Added new item Pull Request, Antique Branch range changed

--- a/game/dota_addons/oitq/scripts/kv/loot.kv
+++ b/game/dota_addons/oitq/scripts/kv/loot.kv
@@ -30,6 +30,7 @@
             "1"         "item_box_of_lost_souls"
             "2"         "item_sudden_death"
             "3"         "item_antique_branch"
+            "4"         "item_pull_request"
         }
     }
     "epic"
